--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  : 
+naver_site_verification  : "5e521e016277fa72d428c93082a5804bf76a3457"
 yandex_site_verification :
 baidu_site_verification  :
 
